registration form created

--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
     <h1 style="color:blue">Registration Form</h1>
     <form>
         <h2 style="color: green;">Username
-        <input type="title" name="username" size="30"></h2>
+            <input type="title" name="username" size="30">
+        </h2>
         <h2 style="color: green;">Password
-        <input type="password" name="password" size="20"></h2>
+            <input type="password" name="password" size="20">
+        </h2>
         <h2 style="color: green;">Gender
-        <h2 style="color: rebeccapurple;">Female<input type="radio" name="Gender"></h2>
-        <h2 style="color: rebeccapurple;">Male<input type="radio" name="Gender"></h2></h2>
+            <h2 style="color: rebeccapurple;">Female<input type="radio" name="Gender"></h2>
+            <h2 style="color: rebeccapurple;">Male<input type="radio" name="Gender"></h2>
+        </h2>
         <h2 style="color: green;">Languages Known:
-        <h2 style="color: rebeccapurple;">Telugu<input type="checkbox" name="lang"></h2>
-        <h2 style="color: rebeccapurple;">Hindi<input type="checkbox" name="lang"></h2></h2>
+            <h2 style="color: rebeccapurple;">Telugu<input type="checkbox" name="lang"></h2>
+            <h2 style="color: rebeccapurple;">Hindi<input type="checkbox" name="lang"></h2>
+            <h2 style="color: rebeccapurple;">English<input type="checkbox" name="lang"></h2>
+        </h2>
+        <h2 style="color: green;">Submit: <input type="submit" name="submit"></h2>
     </form>
 </body>
 </html>
